# NoahGameFrame

./: .gitignore  .gitmodules  .travi.yml  .travis.yml  AStyle.bat  Build4Makefile.sh  BuildBusinessSDK.bat  BuildNF.CMake.Release.sh  BuildNF.CMake.Tools.bat  BuildNF.CMake.bat  BuildNF.CMake.sh  BuildNF.CopyDll.bat  BuildNF.CopyDll.sh  BuildNF.Tools.VS2015.Debug.X64.bat  BuildNF.VS2015.Debug.X64.bat  BuildNF.VS2015.Release.X64.bat  CMakeLists.txt  Cleaner.bat  CodeBlocks.workspace  CodeBlocks.workspace.layout  Doxygen.bat  GenerateConfigXML.bat  GenerateConfigXML.sh  KillServers.bat  LICENSE  NF-X.sln  NF-X.workspace  NF.workspace  NF.workspace.layout  NFMessage.sln  NFServerSDK.sln  NFX.sln  NFX.workspace  NF_ReadMe.ppt  NFrame_Introduction_CHS.pdf.REMOVED.git-id  NF框架介绍.ppt  NoahFrame.sln  NoahFrameX.sln  README.md  RunDebugServers.bat  (+22 more)
Dependencies/: BuildBoost.bat  BuildBoost_MAC.sh  BuildLibEvent.txt  CMakeLists.txt  README.md  boost_1_53_0.z01.REMOVED.git-id  boost_1_53_0.z02.REMOVED.git-id  boost_1_53_0.z03.REMOVED.git-id  boost_1_53_0.z04.REMOVED.git-id  boost_1_53_0.zip.001.REMOVED.git-id  boost_1_53_0.zip.002.REMOVED.git-id  boost_1_53_0.zip.003.REMOVED.git-id  boost_1_53_0.zip.004.REMOVED.git-id  boost_1_53_0.zip.005.REMOVED.git-id  boost_1_53_0.zip.REMOVED.git-id  build_dep.bat  build_dep.sh  build_dep_with_source_code.bat  build_hiredis.sh  build_lua.sh  build_vcpkg.sh  build_win.bat  curl-7.37.1.rar.REMOVED.git-id  curl-7.37.1.zip.REMOVED.git-id  curl_libs.zip.REMOVED.git-id  gperftools-2.1.zip.REMOVED.git-id  lib.zip.REMOVED.git-id  libevent_libs.zip.REMOVED.git-id  mysql_libs.zip.REMOVED.git-id  mysqlpp_libs.zip.REMOVED.git-id  protobuf-2.5.0.tar.bz2.REMOVED.git-id  readme.txt  redis-2.6.zip.REMOVED.git-id
Dependencies/LuaIntf/: LuaCompat.h  LuaContext.h  LuaIntf.h  LuaRef.h  LuaState.h  QtLuaIntf.h  luaintf.vcxproj  luaintf.vcxproj.filters
Dependencies/RapidXML/: license.txt  rapidxml.hpp  rapidxml_iterators.hpp  rapidxml_print.hpp
Dependencies/Theron/: CMakeLists.txt  LICENSE.txt  README.txt  Theron.doxy  Theron.sln  makefile
Dependencies/Theron-6.00.01/: Theron.doxy  Theron.sln  Theron.suo.REMOVED.git-id  makefile
Dependencies/ajson/: README.md  ajson.hpp  ajson_msd.hpp  example1_helloworld.cpp  example2_basic.cpp
Dependencies/boost_1_53_0/: BuildBoost.bat  Jamroot  VC_Clear.bat  boost-build.jam  boostcpp.jam  index.html  project-config.jam
Dependencies/common/: base64.hpp  crc32.hpp  http_util.hpp  lexical_cast.hpp  optional.hpp  sha1.hpp  string_ref.hpp  variant.h  variant.hpp
Dependencies/easylog/: easylogging++.h
Dependencies/fflua/: fflua.h  fflua_register.h  fflua_type.h
Dependencies/glog/: google-glog.sln
Dependencies/glog-0.3.3/: AUTHORS  INSTALL  Makefile.am  Makefile.in  README.windows  aclocal.m4  compile  config.guess  config.sub  configure  configure.ac  libglog.pc.in
Dependencies/google-breakpad/: Makefile.am  Makefile.in
Dependencies/gperftools-2.7/: configure  libtool
Dependencies/hiredis/: CMakeLists.txt
Dependencies/libevent/: Makefile  Makefile.in  buffer.c  config.h  config.status  configure  libevent.pc  libevent.sln  libevent.vcxproj  libevent_core.pc  libevent_core.vcxproj  libevent_extra.pc  libevent_openssl.pc  libevent_pthreads.pc  libtool  stamp-h2
Dependencies/libevent-2.0.21-stable/: ChangeLog  Doxyfile  LICENSE  Makefile  Makefile.am  Makefile.in  Makefile.nmake  README  aclocal.m4  arc4random.c  autogen.sh  buffer.c  buffer_iocp.c  bufferevent-internal.h  bufferevent.c  bufferevent_async.c  bufferevent_filter.c  bufferevent_openssl.c  bufferevent_pair.c  bufferevent_ratelim.c  bufferevent_sock.c  changelist-internal.h  compile  config.h  config.h.in  config.status  configure  configure.in  defer-internal.h  depcomp  devpoll.c  epoll.c  epoll_sub.c  evbuffer-internal.h  evdns.c  evdns.h  event-internal.h  event.c  event.h  event_iocp.c  (+48 more)
Dependencies/lua/: CMakeLists.txt  lua.vcxproj  lua.vcxproj.filters  luaconf.h
Dependencies/lua-5.1/: COPYRIGHT  HISTORY  INSTALL  MANIFEST  Makefile  README
Dependencies/luabind-0.9/: .gitignore  Jamroot  LICENSE
Dependencies/luabind-0.9.1/: INSTALL  Jamroot  LICENSE
Dependencies/miniweb/: CMakeLists.txt  crc32.c  crc32.h  http.c  http.def  httpapi.h  httpauth.c  httpclient.c  httpclient.h  httphandler.c  httpint.h  httpmin.c  httppil.c  httppil.h  httppost.c  httpserial.cpp  httpvod.c  httpvod.h  httpxml.c  httpxml.h  miniweb.c  mpd.c  processpil.c  processpil.h  revision.h
Dependencies/mono/: mono-2.0.exp
Dependencies/mono-3.6.0.39/: mono-3.6.0.39.rar.REMOVED.git-id
Dependencies/mysql/: m_string.h  my_config.h  mysql_version.h  mysqld_ername.h  mysqld_error.h  sql_state.h
Dependencies/mysqlpp/: autoflag.h  beemutex.h  cmdline.h  common.h  comparable.h  connection.h  cpool.h  datetime.h  dbdriver.h  exceptions.h  field.h  field_names.h  field_types.h  insertpolicy.h  manip.h  myset.h  mysql++.h  mystring.h  noexceptions.h  null.h  options.h  qparms.h  query.h  querydef.h  refcounted.h  result.h  row.h  scopedconnection.h  sql_buffer.h  sql_types.h  sqlstream.h  ssqls.h  ssqls.h.REMOVED.git-id  ssqls2.h  stadapter.h  stream2string.h  tcp_connection.h  tiny_int.h  transaction.h  type_info.h  (+4 more)
Dependencies/navigation/: CMakeLists.txt  ReadMe.txt  navigation.vcxproj  navigation.vcxproj.filters
Dependencies/protobuf/: CMakeLists.txt  Makefile  Makefile.in  confdefs.h  config.h  config.status  configure  libtool  protobuf-lite.pc  protobuf.pc
Dependencies/protobuf-2.5.0/: CHANGES.txt  CONTRIBUTORS.txt  COPYING.txt  INSTALL.txt  Makefile.am  Makefile.in  README.txt  aclocal.m4  autogen.sh  config.h.in  config.sub  configure  configure.ac  generate_descriptor_proto.sh  ltmain.sh  protobuf-lite.pc.in  protobuf.pc.in
Dependencies/rapidjson/: document.h  rapidjson.h
Dependencies/redis-cplusplus-client/: CMakeLists.txt  Makefile  README.md  (+6 more)
NFComm/: CMakeLists.txt  CopySDK.bat  NFCommon.props  NFKernel.sln  NFKernel_Static.opensdf  NFKernel_Static.sln  NFKernel_Static.suo.REMOVED.git-id
NFMidWare/: CMakeLists.txt
NFServer/: CMakeLists.txt  VC_Clear.bat
(+6905 files in other folders)
