add_subdirectory(NFActorPlugin)
add_subdirectory(NFConfigPlugin)
add_subdirectory(NFCore)
add_subdirectory(NFKernelPlugin)
add_subdirectory(NFLogPlugin)
add_subdirectory(NFMessageDefine)
add_subdirectory(NFNetPlugin)
add_subdirectory(NFNoSqlPlugin)
add_subdirectory(NFMysqlPlugin)
add_subdirectory(NFPluginLoader)