add_subdirectory(NFServer)
add_subdirectory(NFPluginLoader)
add_subdirectory(NFActorPlugin)
add_subdirectory(NFConfigPlugin)
add_subdirectory(NFCore)
add_subdirectory(NFKernelPlugin)
add_subdirectory(NFLogPlugin)
add_subdirectory(NFMessageDefine)
add_subdirectory(NFNetPlugin)
add_subdirectory(NFSecurityPlugin)
add_subdirectory(NFNavigationPlugin)
add_subdirectory(NFNoSqlPlugin)
add_subdirectory(NFTestPlugin)
add_subdirectory(NFLuaScriptPlugin)

if (APPLE)
    add_subdirectory(NFRenderPlugin)
    add_subdirectory(NFBluePrintPlugin)
endif()