add_subdirectory(NFChatPlugin)
add_subdirectory(NFFriendPlugin)
add_subdirectory(NFGuildPlugin)
add_subdirectory(NFHeroPlugin)
add_subdirectory(NFItemBagPlugin)
add_subdirectory(NFMailPlugin)
add_subdirectory(NFShopPlugin)
add_subdirectory(NFRankPlugin)
add_subdirectory(NFSkillPlugin)
add_subdirectory(NFTaskPlugin)
add_subdirectory(NFUserGiftPlugin)