add_subdirectory(NFDBLogicPlugin)
add_subdirectory(NFGameLogicPlugin)
add_subdirectory(NFGameServerNet_ClientPlugin)
add_subdirectory(NFGameServerNet_ServerPlugin)
add_subdirectory(NFGameServerPlugin)
add_subdirectory(NFLoginLogicPlugin)
add_subdirectory(NFLoginNet_ClientPlugin)
add_subdirectory(NFLoginNet_ServerPlugin)
add_subdirectory(NFLoginNet_HttpServerPlugin)
add_subdirectory(NFMasterNet_ServerPlugin)
add_subdirectory(NFMasterNet_HttpServerPlugin)
add_subdirectory(NFMasterServerPlugin)
add_subdirectory(NFProxyServerNet_ClientPlugin)
add_subdirectory(NFProxyServerNet_ServerPlugin)
add_subdirectory(NFProxyLogicPlugin)
add_subdirectory(NFWorldLogicPlugin)
add_subdirectory(NFWorldNet_ClientPlugin)
add_subdirectory(NFWorldNet_ServerPlugin)
add_subdirectory(NFDBNet_ClientPlugin)
add_subdirectory(NFDBNet_ServerPlugin)
#add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../NFDBNet_ServerPlugin ${CMAKE_CURRENT_BINARY_DIR}/NFDBNet_ServerPlugin)